# multi-agent-genai-with-crewai

./: .gitignore  README.md
flow_state_mgmt/: README.md  pyproject.toml
flow_state_mgmt/src/flow_state_mgmt/: main.py
guide_creator_flow/: README.md  pyproject.toml
guide_creator_flow/src/guide_creator_flow/: main.py
guide_creator_flow/src/guide_creator_flow/crews/content_crew/: content_crew.py
guide_creator_flow/src/guide_creator_flow/crews/content_crew/config/: agents.yaml  tasks.yaml
guide_creator_flow/src/guide_creator_flow/crews/poem_crew/: poem_crew.py
latest_ai_development/: pyproject.toml
latest_ai_development/src/latest_ai_development/: crew.py  main.py
latest_ai_development/src/latest_ai_development/config/: tasks.yaml
pipeline_safety_rag_crew/: .env.example  README.md  pyproject.toml
pipeline_safety_rag_crew/data/rag_index/: .gitignore  .gitkeep
pipeline_safety_rag_crew/src/pipeline_safety_rag_crew/: __init__.py  crew.py  main.py
pipeline_safety_rag_crew/src/pipeline_safety_rag_crew/config/: agents.yaml  tasks.yaml
pipeline_safety_rag_crew/src/pipeline_safety_rag_crew/tools/: __init__.py  rag_tool.py
research_crew/: pyproject.toml
research_crew/src/research_crew/: crew.py
research_crew/src/research_crew/config/: agents.yaml
