[project]
name = "flow_state_mgmt"
version = "0.1.0"
description = "flow_state_mgmt using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3"
]

[project.scripts]
kickoff = "flow_state_mgmt.main:kickoff"
run_crew = "flow_state_mgmt.main:kickoff"
plot = "flow_state_mgmt.main:plot"
run_with_trigger = "flow_state_mgmt.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
